--- a/project_info.json
+++ b/project_info.json
@@ -1,1 +1,1 @@
-{"gitStatus":"CLONE_COMPLETED","testStatus":0,"currentTestResult":null,"workingDirectory":"C:\\Users\\naaz\\MissionRnDProjects\\c-strings"}
+{"gitStatus":"REPO_CREATED","testStatus":0,"currentTestResult":true,"workingDirectory":"C:\\Users\\naaz\\MissionRnDProjects\\c-strings"}
